@@ -3,6 +3,7 @@
 S3method(as_term_list,character)
 S3method(as_term_list,dictionary)
 S3method(as_term_list,dictionary2)
+S3method(as_term_list,list)
 S3method(coverage,default)
 S3method(coverage,hierarchical_term_count)
 S3method(coverage,search_term)
@@ -45,6 +46,11 @@ S3method(split_data,data.frame)
 S3method(split_data,default)
 S3method(summary,hierarchical_coverage_regex)
 S3method(summary,validate_model)
+S3method(test_regex,character)
+S3method(test_regex,list)
+S3method(test_regex,term_list)
+S3method(test_regex,termco_nested)
+S3method(test_regex,termco_unnested)
 S3method(weight,term_count)
 S3method(weight,token_count)
 export("as_count<-")
@@ -97,6 +103,7 @@ export(term_cols)
 export(term_count)
 export(term_first)
 export(term_list_template)
+export(test_regex)
 export(token_count)
 export(uncovered)
 export(unnest_source_term_list)
